# GE-Pressure-Ulcer

./: DESCRIPTION  README.md  Venenorosmd@msn.com
prevention_assessment_cplusplus_analytics/gevxl/projects/security/pressure_ulcer/: CMakeLists.txt  pu_camera_source_proc.cxx  pu_camera_source_proc.h  pu_motion_feature_analysis_proc.cxx  pu_motion_feature_analysis_proc.h
prevention_assessment_cplusplus_analytics/gevxl/projects/security/pressure_ulcer/assessment/: CMakeLists.txt  pu_3d_recon_proc.cxx  pu_3d_recon_proc.h  pu_assessment_system_proc.cxx  pu_assessment_system_proc.h  pu_assessment_system_proc_New.cxx  pu_thermal_analysis_proc.cxx  pu_thermal_analysis_proc.h  pu_tissue_analysis_proc.cxx  pu_tissue_analysis_proc.h
prevention_assessment_cplusplus_analytics/gevxl/projects/security/pressure_ulcer/assessment/biochemical/: CMakeLists.txt  biochemical_sensor.cxx  biochemical_sensor.h
prevention_assessment_cplusplus_analytics/gevxl/projects/security/pressure_ulcer/assessment/biochemical - no exception/: AllDLL.h  CMakeLists.txt  biochemical_sensor.cxx  biochemical_sensor.h
prevention_assessment_cplusplus_analytics/gevxl/projects/security/pressure_ulcer/assessment/database/: CMakeLists.txt  assessment_database_reader.h  assessment_database_writer.cxx  assessment_database_writer.h  segment_database_entry.cxx  segment_database_entry.h  segment_database_table.cxx  segment_database_table.h
prevention_assessment_cplusplus_analytics/gevxl/projects/security/pressure_ulcer/assessment/exec/: CMakeLists.txt  pu_assessment_gui_app.cxx
prevention_assessment_cplusplus_analytics/gevxl/projects/security/pressure_ulcer/assessment/graphcut/: CMakeLists.txt  GCoptimization.cpp  GCoptimization.h  LinkedBlockList.cpp  LinkedBlockList.h  block.h  energy.h  graph.cpp  graph.h  maxflow.cpp
prevention_assessment_cplusplus_analytics/gevxl/projects/security/pressure_ulcer/assessment/gui/: CMakeLists.txt  pu_assessment_frame.cxx  pu_assessment_frame.h  pu_snapshot_taking_client.cxx  pu_snapshot_taking_client.h  pu_thermal_analysis_client.cxx  pu_thermal_analysis_client.h  pu_tissue_analysis_client.cxx  pu_tissue_analysis_client.h
prevention_assessment_cplusplus_analytics/gevxl/projects/security/pressure_ulcer/config/: .#pu_prevention.tconf.1.11  pu_assessment.tconf  pu_assessment.tconf_Local_2014_0428  pu_assessment.tconf_Local_2014_0513  pu_assessment_Backup.tconf  pu_camera_source.tconf  pu_motion_feature_analysis.tconf  pu_motion_feature_analysis.tconf_local_copy  pu_motion_feature_analysis_HDSL.tconf  pu_prevention.tconf  pu_prevention_Playback.tconf  pu_prevention_pose_estimate.tconf  pu_rgbd_camera_vtk.tconf_Local_2014_0513
prevention_assessment_cplusplus_analytics/gevxl/projects/security/pressure_ulcer/exec/: CMakeLists.txt  pu_camera_source_gui_app.cxx  pu_motion_feature_analysis_gui_app.cxx
prevention_assessment_cplusplus_analytics/gevxl/projects/security/pressure_ulcer/gui/: CMakeLists.txt  pu_camera_source_frame.cxx  pu_camera_source_frame.h  pu_pixel_picking_client.cxx  pu_pixel_picking_client.h
prevention_assessment_cplusplus_analytics/gevxl/projects/security/pressure_ulcer/poc/: CMakeLists.txt
prevention_assessment_cplusplus_analytics/gevxl/projects/security/pressure_ulcer/poc/bayspec_sdk/: CMakeLists.txt
prevention_assessment_cplusplus_analytics/gevxl/projects/security/pressure_ulcer/poc/intel_perceptual_sdk/: CMakeLists.txt
prevention_assessment_cplusplus_analytics/gevxl/projects/security/pressure_ulcer/poc/kinectsdk/: CMakeLists.txt  pu_kinectsdk_control_process_chain.cxx  pu_kinectsdk_control_process_chain.h  pu_kinectsdk_face_process.cxx  pu_kinectsdk_face_process.h  pu_kinectsdk_kinfu_process.cxx  pu_kinectsdk_kinfu_process.h  pu_kinectsdk_sensor.cxx  pu_kinectsdk_sensor.h  pu_kinectsdk_skeleton_process.cxx  pu_kinectsdk_skeleton_process.h
prevention_assessment_cplusplus_analytics/gevxl/projects/security/pressure_ulcer/poc/micro_epsilon_sdk/: CMakeLists.txt
prevention_assessment_cplusplus_analytics/gevxl/projects/security/pressure_ulcer/poc/pcl_sdk/: CMakeLists.txt
prevention_assessment_cplusplus_analytics/gevxl/projects/security/pressure_ulcer/poc/pose_estimate/: CMakeLists.txt  nearest_neighbor_classifier.h  patient_pose.h  pose_estimate_proc.cxx  (+2 more)
prevention_assessment_cplusplus_analytics/gevxl/projects/security/pressure_ulcer/prevention/: CMakeLists.txt  pu_prevention.tconf  pu_prevention_chaining_process.cxx  pu_prevention_chaining_process.h  pu_prevention_chaining_process_Playback.cxx  pu_prevention_chaining_process_Playback.h  pu_prevention_database_writer.h  pu_prevention_gui_app.cxx  pu_prevention_person_detect_process.cxx  pu_prevention_person_detect_process.h  pu_prevention_pose_estimate_chaining_process.cxx  pu_prevention_pose_estimate_chaining_process.h  pu_prevention_pose_estimate_process.cxx  pu_prevention_pose_estimate_process.h  pu_prevention_turning_protocol_process.cxx  pu_prevention_turning_protocol_process.h  pu_prevention_videoarchive_frame_process.cxx  pu_prevention_videoarchive_frame_process.h  pu_prevention_videoarchive_writer_process.cxx  pu_prevention_videoarchive_writer_process.h  pu_prv_motion_demo.tconf  pu_prv_motion_demo_chain_process.cxx  pu_prv_motion_demo_chain_process.h  pu_prv_motion_demo_gui_app.cxx  pu_prv_motion_estimate_process.cxx  pu_prv_motion_estimate_process.h  pu_prv_rectify_kinect_process.cxx  pu_prv_rectify_kinect_process.h  pu_prv_rectify_kinect_process_Playback.cxx  pu_prv_rectify_kinect_process_Playback.h
prevention_assessment_cplusplus_analytics/gevxl/projects/security/pressure_ulcer/swig/: CMakeLists.txt  CMakeLists.txt_Local  pressure_ulcer.i  pressure_ulcer.i_Local  pressure_ulcerPYTHON_wrap.h
prevention_assessment_cplusplus_analytics/gevxl/share/vid/: CMakeLists.txt  bayspec_socket_camera.cxx  bayspec_socket_camera.h  bayspec_socket_frame_process.cxx  bayspec_socket_frame_process.h  micro_epsilon_socket_camera.cxx  micro_epsilon_socket_camera.h  micro_epsilon_socket_frame_process.cxx  micro_epsilon_socket_frame_process.h  pxc_camera.cxx  pxc_camera.h  pxc_frame_process.cxx  pxc_frame_process.h
(+246 files in other folders)
