#projects/security/pressure_ulcer/intel_perceptual_sdk/CMakeLists.txt 

INCLUDE_DIRECTORIES( ${VXL_OXL_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${VXL_BRL_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${VXL_GEL_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${VXL_RPL_INCLUDE_DIR} )

FIND_PACKAGE( PCSDK )

IF (PCSDK_FOUND)
  
  ADD_DEFINITIONS( -DGEVXL_DEPTH_HAS_INTEL_PERCEPTUAL_SDK )

  INCLUDE_DIRECTORIES( ${PCSDK_INCLUDE_DIRS} )

ENDIF (PCSDK_FOUND)

#sub-folders
SUBDIRS( exec )
