#projects/security/pressure_ulcer/micro_epsilon_sdk/CMakeLists.txt 

INCLUDE_DIRECTORIES( ${VXL_OXL_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${VXL_BRL_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${VXL_GEL_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${VXL_RPL_INCLUDE_DIR} )

FIND_PACKAGE( MicroEpsilon )

IF (MICRO_EPSILON_IMAGERIPC_FOUND)
  
  ADD_DEFINITIONS( -DGEVXL_HAS_MICRO_EPSILON_IMAGERIPC_SDK )

  INCLUDE_DIRECTORIES( ${MICRO_EPSILON_IMAGERIPC_INCLUDE_DIR} )

ENDIF (MICRO_EPSILON_IMAGERIPC_FOUND)

#sub-folders
SUBDIRS( exec )
