#projects/security/pressure_ulcer/pcl_sdk/CMakeLists.txt 

INCLUDE_DIRECTORIES( ${VXL_OXL_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${VXL_BRL_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${VXL_GEL_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${VXL_RPL_INCLUDE_DIR} )

FIND_PACKAGE( PCL )

IF (PCL_FOUND)
  
  ADD_DEFINITIONS( -DGEVXL_DEPTH_HAS_PCL_SDK )

  INCLUDE_DIRECTORIES( ${PCL_INCLUDE_DIRS} )

ENDIF (PCL_FOUND)

#sub-folders
SUBDIRS( exec )
